First draft of unequal schools interactive maps 2/4/2014

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,9 +6,9 @@ a:hover { color: #4B58A6; }
 }
 
 /* MODIFY polygon legend colors (left, middle, right) to match 3-color buckets in your Google Fusion Table. See also http://ColorBrewer2.org*/
-#legend-left { border-top: 10px solid #FDBE85; }
-#legend-middle { border-top: 10px solid #FD8D3C; }
-#legend-right { border-top: 10px solid #D94701; }
+#legend-left { border-top: 10px solid #cfe2f3; }
+#legend-middle { border-top: 10px solid #6fa8dc; }
+#legend-right { border-top: 10px solid #0b5394; }
 #polygon-legend { background: none; clear: both; margin-bottom: 0.3em; padding: 8px 0 0 0; margin: 15px 0 0 0; list-style: none; }
 #polygon-legend li { width: 32%; float: left; margin: 0 1% 10px 0; white-space: nowrap; text-align: center; font-size: 11px; color: #77787b; }
 
